cmake_minimum_required(VERSION 3.28)
project(Data_Structure_with_CPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Structure_with_CPP main.cpp)
add_executable(BinarySearch binarySearch.cpp)
add_executable(LinearSearch linearSearch.cpp)
add_executable(1DArrayInsert 1DArrayInsertion.cpp)
add_executable(1DArrayDelete 1DArrayDeletion.cpp)
add_executable(1DArrayMerge 1DArrayMerge.cpp)
add_executable(2DArray 2DArray.cpp)
